; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/~attic/pc/extr_sdl-netplay.c_FCEUD_SendDataToServer.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/~attic/pc/extr_sdl-netplay.c_FCEUD_SendDataToServer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i64, i64, i32, i64 }

@data = common dso_local global i32 0, align 4
@UDPHEADSIZE = common dso_local global i64 0, align 8
@UDPSocket = common dso_local global i32 0, align 4
@outcounter = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @FCEUD_SendDataToServer(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 4
  store i64 0, i64* %6, align 8
  %7 = load i32, i32* @data, align 4
  %8 = call i32 @MakeUDP(i32 %7, i32 1)
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 3
  store i32 %8, i32* %9, align 8
  %10 = load i64, i64* @UDPHEADSIZE, align 8
  %11 = add nsw i64 %10, 1
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  store i64 %11, i64* %12, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 2
  store i64 %11, i64* %13, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  store i64 0, i64* %14, align 8
  %15 = load i32, i32* @UDPSocket, align 4
  %16 = call i32 @SDLNet_UDP_Send(i32 %15, i32 0, %struct.TYPE_3__* %5)
  %17 = load i32, i32* @outcounter, align 4
  %18 = add nsw i32 %17, 1
  store i32 %18, i32* @outcounter, align 4
  ret i32 1
}

declare dso_local i32 @MakeUDP(i32, i32) #1

declare dso_local i32 @SDLNet_UDP_Send(i32, i32, %struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
